--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.es.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.es.yml
@@ -88,8 +88,8 @@ form:
         label: enviar
 
 contributions:
-    php_user_groups:   Grupos de usuarios PHP
-    contributors_list: Lista de Contribuidores Públicos
+    php_user_groups:   grupos de usuarios PHP
+    contributors_list: contribuidores públicos
 
 about:
     final_video:
@@ -189,10 +189,14 @@ about:
                 <p>El proyecto tiene una cuenta de Twitter:
                 <a href="https://twitter.com/haphpy20" class="differ">@haphpy20</a>.</p>
                 <p>No dudes en compartir el proyecto con tus amigos así como en redes sociales.</p>
-                <p>Hashtag: #20YearsOfPHP</p>
+                <p>Hashtag: #haPHPy20</p>
 
     thanks:
         title: Reconocimientos
         elaostrap: El estilo está basado en <a href="https://github.com/JeremyFagis/ElaoStrap" class="differ">elaostrap</a> de Jeremy Fagis.
         php_ug:    Los grupos de usuario de PHP fueron contactados gracias a <a href="http://php.ug/" class="differ">php.ug</a>.
         fanzutti:  Ejemplos con la ayuda de <a href="http://www.florafanzutti.com" class="differ">Flora Fanzutti</a>.
+
+footer:
+    github: Repositorio en GitHub
+    by_community: Made by the PHP community with <span class="fa fa-heart"></span>
