Update menu with login & navbar logo

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
@@ -26,6 +26,12 @@ menu:
         label: About
     mobile:
         navigation: navigation
+    user:
+        login:    Log in
+        logout:   Log out
+        facebook: Facebook
+        github:   GitHub
+        twitter:  Twitter
 
 step:
     authenticate:
