--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
@@ -26,6 +26,12 @@ menu:
         label: À propos
     mobile:
         navigation: navigation
+    user:
+        login:    Connexion
+        logout:   Déconnexion
+        facebook: Facebook
+        github:   GitHub
+        twitter:  Twitter
 
 step:
     authenticate:
